# interactive-arap

./: .gitignore  CMakeLists.txt  LICENSE  README.md  glad.c  main.cpp  old_main.cpp  shaderClass.cpp
cmake/libigl/: libigl.cmake
data/: human.off
include/: Arap-Ceres.h  Arap-Default.h  Arap.h  Eigen.h  GUI.h  Mesh.h  Shader.h  SimpleArap.h  myarap.h  shaderClass.h
resources/models/: bunny.off  human.off
resources/models/armadillo/: armadillo_10k.off  armadillo_1k.off  armadillo_250.off  armadillo_2k.off  armadillo_500.off  armadillo_5k.off
resources/models/bar/: bar.off
resources/models/cactus/: cactus_highres.off  cactus_small.off
resources/models/dino/: dino.off
resources/shader/: default.vert
resources/shaders/: default.frag  default.vert
shaders/: model.frag  model.vert
src/: Arap-Ceres.cpp  Arap-Default.cpp  Arap.cpp  Arap.h  GUI.cpp  Mesh.cpp  Shader.cpp  ShaderClass.cpp  ShaderClass.h  SimpleArap.cpp  SimpleArap.h  myarap.cpp  shaderClass.cpp
utils/: glad.h  shaderClass.cpp  shaderClass.h  stb.cpp  stb.h
